# AI-Agents-Hub

./: .gitignore  README.md
.contentpilot/: contentpilot.db
ContentGeneration/: .gitignore  Dockerfile  README.md  docker-compose.yml  docker.py  gemini.md  package-lock.json  package.json
ContentGeneration/.contentpilot/: settings.json
ContentGeneration/backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  searxng_settings.yml  verify_embeddings.py
ContentGeneration/backend/.contentpilot/: settings.json
ContentGeneration/backend/agents/: graph.py
ContentGeneration/backend/alembic/: env.py
ContentGeneration/backend/api/: __init__.py
ContentGeneration/backend/api/v1/: __init__.py  content.py
ContentGeneration/backend/contentpilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ContentGeneration/backend/db/: __init__.py  database.py
ContentGeneration/backend/models/: content_models.py
ContentGeneration/backend/services/: content_service.py  docker_service.py  image_service.py  memory_service.py  research_pipeline.py  run_events.py
ContentGeneration/backend/src/backend/: main.py
ContentGeneration/backend/src/backend/agents/: __init__.py  base.py  graph.py  research.py
ContentGeneration/backend/src/backend/api/: __init__.py
ContentGeneration/backend/src/backend/api/v1/: channels.py  content.py  phase1.py
ContentGeneration/backend/src/backend/core/: config.py
ContentGeneration/backend/src/backend/db/: database.py
ContentGeneration/backend/src/backend/models/: __init__.py  channel.py  channel_model.py  content_models.py  phase1_models.py  user.py  user_model.py
ContentGeneration/backend/src/backend/services/: __init__.py  content_service.py  docker_service.py  embedding_service.py  memory_service.py  phase1_service.py  research_pipeline.py
ContentGeneration/backend/src/backend/utils/: formatting.py
ContentGeneration/backend/src/contentpilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ContentGeneration/frontend/: README.md  index.html  package-lock.json  package.json
ContentGeneration/frontend/src/: App.css  App.jsx  index.css
ContentGeneration/init-scripts/: 01-pgvector.sh
Spiritual_AI_Agent/: Spiritual_AI_Agent_Langchain.ipynb
StudyForge-Multi-Agent/: test.py
Video2Notes_Agent/: .gitignore  README.md  analyzer.py  api.py  config.py  database.py  export_service.py  extractor.py  fix_db.py  groq.md  groq_1.py  hybrid_search.py  main.py  note_structuring.py  pyproject.toml  rag_engine.py  requirements.txt  source_utils.py  study_assets.py  synthesizer.py  test_enhancements.py  test_extract.py  transcriber.py
Video2Notes_Agent/frontend/: package-lock.json  package.json  vite.config.js
Video2Notes_Agent/frontend/src/: App.jsx  index.css  main.jsx
Video2Notes_Agent/frontend/src/components/: ChatSection.jsx  Header.jsx  MarkdownRenderer.jsx  Modal.jsx  NotesViewer.jsx  NotesWorkspace.jsx  ProcessSection.jsx  ProcessingSteps.jsx  SettingsSection.jsx
Video2Notes_Agent/frontend/src/context/: ConfigContext.jsx  ThemeContext.jsx
Video2Notes_Agent/frontend/src/views/: BatchView.jsx  HomeView.jsx  LibraryView.jsx  ProcessingView.jsx  ResultView.jsx
(+10 files in other folders)
